Added Tests for Banker and Edited Class